rajbir's changes, not everything may work

--- a/b_mnistTf2.ipynb
+++ b/b_mnistTf2.ipynb
@@ -126,7 +126,9 @@
         "\n",
         "  def call(self, inputs):\n",
         "    EPSILON = 1.0e-9\n",
-        "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs), axis=self.axis, keepdims=True)\n",
+        "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs),\\\n",
+        "                                           axis=self.axis,\\\n",
+        "                                           keepdims=True)\n",
         "    safe_norm = tf.sqrt(squared_norm + EPSILON)\n",
         "    squash_factor = squared_norm / (1. + squared_norm)\n",
         "    unit_vector = inputs / safe_norm\n",
@@ -173,9 +175,10 @@
         "  def build(self, input_shapes):\n",
         "    init_sigma = 0.1\n",
         "    #                                    print(\"input_shapes = \", input_shapes)\n",
-        "    self.kernel = self.add_weight(\"kernel\", \n",
-        "                                  (caps1_n_caps, caps2_n_caps, caps2_n_dims, caps1_n_dims),\n",
-        "                                  initializer=\"random_normal\", dtype=tf.float32)\n",
+        "    self.kernel = self.add_weight(\\\n",
+        "                      \"kernel\", \n",
+        "                      (caps1_n_caps, caps2_n_caps, caps2_n_dims, caps1_n_dims),\n",
+        "                      initializer=\"random_normal\", dtype=tf.float32)\n",
         "    #print(\"My Caps Layer2: self.kernel = \", self.kernel.shape, \"input_shape = \", input_shapes)\n",
         "\n",
         "  \n",
@@ -212,23 +215,49 @@
       },
       "source": [
         "class RoutingByAgreement(K.layers.Layer):\n",
-        "  def __init__(self, **kwargs):\n",
+        "  def __init__(self, roundno=-1, agreement=None, **kwargs):\n",
         "    super(RoutingByAgreement, self).__init__(**kwargs)\n",
+        "    self.round_number = roundno\n",
+        "    self.agreement = agreement\n",
         "\n",
         "  def build(self, input_shapes):\n",
-        "    self.raw_weights_1 = self.add_weight(\"raw_weights\", (caps1_n_caps, caps2_n_caps, 1, 1), initializer = \"zeros\", dtype=tf.float32,)\n",
+        "    self.raw_weights_1 = self.add_weight(\"raw_weights\", \\\n",
+        "                                         (caps1_n_caps, caps2_n_caps, 1, 1), \\\n",
+        "                                         initializer = \"zeros\", \\\n",
+        "                                         dtype=tf.float32,)\n",
         "    \n",
         "    #print(\"Routing layer: self.raw_weights = \", self.raw_weights.shape, \"input_shape = \", input_shapes)\n",
         "\n",
         "\n",
-        "  def call(self, inputs, round, agreement ):\n",
-        "    if round == 1:\n",
+        "  def squash(self, inputs):\n",
+        "    EPSILON = 1.0e-9\n",
+        "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs),\\\n",
+        "                                           axis=self.axis,\\\n",
+        "                                           keepdims=True)\n",
+        "    safe_norm = tf.sqrt(squared_norm + EPSILON)\n",
+        "    squash_factor = squared_norm / (1. + squared_norm)\n",
+        "    unit_vector = inputs / safe_norm\n",
+        "    return squash_factor * unit_vector\n",
+        "    \n",
+        "  def single_round_routing(self, inputs):\n",
+        "    pass\n",
+        "\n",
+        "  def call(self, inputs):\n",
+        "    if self.round_number == 1:\n",
         "      self.raw_weights = self.raw_weights_1\n",
         "    \n",
-        "    elif round == 2:\n",
-        "      self.raw_weights = tf.add(self.raw_weights_1, agreement, name=\"raw_weights_round_2\")\n",
+        "    elif self.round_number == 2:\n",
+        "      self.raw_weights = tf.add(self.raw_weights_1,\\\n",
+        "                                agreement,\\\n",
+        "                                name=\"raw_weights_round_2\")\n",
         "    \n",
-        "    self.routing_weights = tf.nn.softmax(self.raw_weights, axis=2, name=\"routing_weights\")\n",
+        "    value = inputs\n",
+        "    for i in range(num_routes):\n",
+        "      value = single_round_routing(self, value)\n",
+        "\n",
+        "    self.routing_weights = tf.nn.softmax(self.raw_weights,\\\n",
+        "                                         axis=2,\\\n",
+        "                                         name=\"routing_weights\")\n",
         "    \n",
         "    weighted_predictions = tf.multiply(self.routing_weights, inputs,\n",
         "                                   name=\"weighted_predictions\")\n",
@@ -243,9 +272,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pg6qxAU3h0hv"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "id": "Pg6qxAU3h0hv",
+        "outputId": "3a010ae6-3dce-4410-c2e7-ea62e1690039"
       },
       "source": [
+        "# https://www.tensorflow.org/api_docs/python/tf/keras/losses/Loss\n",
+        "class MarginLoss(K.losses.Loss):\n",
+        "    def __init__(self, **kwargs):\n",
+        "      super(MarginLoss, self).__init__(**kwargs)\n",
+        "    \n",
+        "    def call(self, y_true, y_pred):\n",
+        "      print(y_true, y_true.shape)\n",
+        "      print(y_pred, y_pred.shape)\n",
+        "      return 0\n",
+        "\n",
+        "\n",
         "def margin_loss(input): #input = caps2_output_round_2\n",
         "  y = K.Input(shape=[], dtype=tf.int64, name=\"y\")\n",
         "  m_plus = 0.9\n",
@@ -270,8 +315,20 @@
         "  marginLoss = tf.reduce_mean(tf.reduce_sum(L, axis=1), name=\"margin_loss\")\n",
         "  return marginLoss"
       ],
-      "execution_count": 27,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-7318aa9cef16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# https://www.tensorflow.org/api_docs/python/tf/keras/losses/Loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mMarginLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlosses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLoss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m       \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMarginLoss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'K' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -326,28 +383,30 @@
         "        # I haven't got to it yet, this will take time\n",
         "        # at any point of time print the shape, and it will print it\n",
         "        x = MyDigitCapsLayer(name = \"caps2_predicted\")(x)\n",
-        "        caps2_predicted = x\n",
+        "        caps2_predicted = x # Save this value for later\n",
         "        \n",
         "        #routing by agreement\n",
         "        #Round 1\n",
-        "        x = RoutingByAgreement(name=\"routing1\")(caps2_predicted, round = 1, agreement = None)\n",
+        "        x = RoutingByAgreement(name=\"routing1\", roundno=1, agreement=None)(x)\n",
         "        x = SquashLayer(name= \"caps2_output_round_1\", axis= -2)(x)\n",
+        "\n",
         "\n",
         "        #Round2\n",
         "        #tiling\n",
-        "        x = tf.tile(x , [1, caps1_n_caps, 1, 1, 1], name=\"caps2_output_round_1_tiled\")\n",
+        "        x = tf.tile(\\\n",
+        "                    x ,\\\n",
+        "                    [1, caps1_n_caps, 1, 1, 1],\\\n",
+        "                    name=\"caps2_output_round_1_tiled\")\n",
         "        #agreement\n",
-        "        agreement = tf.matmul(caps2_predicted, x,\n",
-        "                      transpose_a=True, name=\"agreement\")\n",
-        "        x = RoutingByAgreement(name=\"routing2\")(caps2_predicted, round = 2, agreement =agreement )\n",
+        "        agreement = tf.matmul(\\\n",
+        "                              caps2_predicted, \\\n",
+        "                              x,\\\n",
+        "                              transpose_a=True,\\\n",
+        "                              name=\"agreement\")\n",
+        "        print(f\"x.shape = {x.shape}, caps2_predicted.shape = {caps2_predicted.shape}, agreement.shape = {agreement.shape}\")\n",
+        "        \n",
+        "        x = RoutingByAgreement(name=\"routing2\", roundno=2, agreement=agreement)(x)\n",
         "        x = SquashLayer(name= \"caps2_output_round_2\", axis= -2)(x)\n",
-        "        \n",
-        "\n",
-        "\n",
-        "\n",
-        "       \n",
-        "        \n",
-        "\n",
         "        \n",
         "        return K.Model(inputs=inp, outputs=x, name='my')\n",
         "    \n",
