accuracy metric now works

--- a/b_mnistTf2.ipynb
+++ b/b_mnistTf2.ipynb
@@ -213,46 +213,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6zxRXCYIz_HQ"
-      },
-      "source": [
-        "class MyAccuracy(K.metrics.Metric):\n",
-        "  def __init__(self, **kwargs):\n",
-        "    super(MyAccuracy, self).__init__(**kwargs)\n",
-        "    self.state = 0\n",
-        "  \n",
-        "  def safe_norm(self, input, axis=-2, epsilon=1e-7, keep_dims=False, name=None):\n",
-        "      squared_norm = tf.reduce_sum(tf.square(input), axis=axis,\n",
-        "                                     keepdims=keep_dims)\n",
-        "      return tf.sqrt(squared_norm + epsilon)\n",
-        "  def update_state(self, y_true, input, sample_weight=None):\n",
-        "    try:\n",
-        "      print(\"--__-->\", y_true.shape, input.shape)\n",
-        "      #tf.one_hot(y_true, depth=caps2_n_caps, name=\"T\")\n",
-        "      y_proba = self.safe_norm(input, axis=-2)\n",
-        "      y_proba_argmax = tf.argmax(y_proba, axis=2)\n",
-        "      y_pred = tf.squeeze(y_proba_argmax, axis=[1,2], name=\"y_pred\")\n",
-        "      y_true = tf.reshape(y_true, (y_true.shape[0], ))\n",
-        "\n",
-        "      y_true = tf.cast(y_true, dtype=tf.int64)\n",
-        "      y_same = tf.cast(tf.math.equal(y_true, y_pred), dtype=tf.int32)\n",
-        "      y_same = tf.math.reduce_mean(y_same, keepdims=True)\n",
-        "      self.state = y_same\n",
-        "      print(\"-->\", y_same)\n",
-        "      #print(\"|||-->\", tf.make_ndarray(y_same))\n",
-        "    except:\n",
-        "      self.state = 0\n",
-        "    \n",
-        "\n",
-        "  def result(self):\n",
-        "    return self.state"
-      ],
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Pg6qxAU3h0hv"
       },
       "source": [
@@ -302,7 +262,7 @@
         "      return marginLoss\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -361,7 +321,7 @@
         "                            name=\"agreement\")\n",
         "    return sqsh_wt_sum                           \n"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -372,7 +332,7 @@
       "source": [
         "(x_train, y_train,), (x_test, y_test) = K.datasets.mnist.load_data()"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -383,7 +343,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UnmSudqTMlPX",
-        "outputId": "e389ef20-03f7-404b-85e9-12eeaafcc611"
+        "outputId": "e8e288c8-370a-4a2b-82de-643a5e18eed6"
       },
       "source": [
         "\n",
@@ -448,16 +408,16 @@
         "\n",
         "\n"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7fd2619b6710>> and will run it as-is.\n",
+            "WARNING:tensorflow:AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7fe9fb0ffa90>> and will run it as-is.\n",
             "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
             "Cause: invalid syntax (<unknown>, line 5)\n",
             "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-            "WARNING: AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7fd2619b6710>> and will run it as-is.\n",
+            "WARNING: AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7fe9fb0ffa90>> and will run it as-is.\n",
             "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
             "Cause: invalid syntax (<unknown>, line 5)\n",
             "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
@@ -484,7 +444,7 @@
             "Trainable params: 6,815,744\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
-            "<tensorflow.python.keras.engine.functional.Functional object at 0x7fd269edc610> <class 'tensorflow.python.keras.engine.functional.Functional'> None\n"
+            "<tensorflow.python.keras.engine.functional.Functional object at 0x7fe9e0258b90> <class 'tensorflow.python.keras.engine.functional.Functional'> None\n"
           ],
           "name": "stdout"
         }
@@ -497,14 +457,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b454c8ad-43fc-448e-cf08-abc5d00aa9df"
+        "outputId": "1104d28c-9e11-4ad7-bc7c-0db05fab95ee"
       },
       "source": [
         "y_train_train = tf.one_hot(y_train, depth=caps2_n_caps, name=\"T\")\n",
         "print(y_train_train.shape)\n",
         "#print(y_train)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,28 +478,55 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6zxRXCYIz_HQ"
+      },
+      "source": [
+        "class MyAccuracy(K.metrics.Metric):\n",
+        "  def __init__(self, **kwargs):\n",
+        "    super(MyAccuracy, self).__init__(**kwargs)\n",
+        "    self.acc_obj = K.metrics.Accuracy()\n",
+        "    self.state = 0\n",
+        "  \n",
+        "  def safe_norm(self, input, axis=-2, epsilon=1e-7, keep_dims=True, name=None):\n",
+        "      squared_norm = tf.reduce_sum(tf.square(input), axis=axis,\n",
+        "                                     keepdims=keep_dims)\n",
+        "      return tf.sqrt(squared_norm + epsilon)\n",
+        "\n",
+        "  def update_state(self, y_true, input, sample_weight=None):\n",
+        "    y_proba = self.safe_norm(input, axis=-2)\n",
+        "    y_proba_argmax = tf.argmax(y_proba, axis=2)\n",
+        "    y_pred = tf.squeeze(y_proba_argmax, axis=[1,2], name=\"y_pred\")\n",
+        "    y_true = tf.reshape(y_true, (y_true.shape[0], ))\n",
+        "    y_true = tf.cast(y_true, dtype=tf.int64)\n",
+        "    self.acc_obj.update_state(y_true, y_pred, sample_weight)\n",
+        "\n",
+        "  def result(self):\n",
+        "    return self.acc_obj.result()"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cahMgtOqMlPa",
-        "outputId": "8fb7ec02-6b49-4230-ff02-e355167071e7"
+        "outputId": "8bfd57fc-93c9-4bc6-9798-4cb706589ff6"
       },
       "source": [
         "m.compile(optimizer='adam', loss=MarginLoss(), metrics=[MyAccuracy()])#, metrics=['accuracy'])\n",
-        "history = m.fit(x_train, y_train, batch_size= 32, epochs= 3, verbose= 2)\n"
+        "history = m.fit(x_train, y_train, batch_size=32, epochs= 1, verbose= 1)\n"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/3\n",
             "--> (32, 1) (32, 1, 10, 16, 1)\n",
-            "--__--> (32, 1) (32, 1, 10, 16, 1)\n",
-            "--> Tensor(\"Mean:0\", shape=(1,), dtype=int32)\n",
             "--> (32, 1) (32, 1, 10, 16, 1)\n",
-            "--__--> (32, 1) (32, 1, 10, 16, 1)\n",
-            "--> Tensor(\"Mean:0\", shape=(1,), dtype=int32)\n"
+            " 963/1875 [==============>...............] - ETA: 1:05 - loss: 2.2816 - my_accuracy: 0.1913"
           ],
           "name": "stdout"
         }
