validation data now specified in model.fit

--- a/b_mnistTf2.ipynb
+++ b/b_mnistTf2.ipynb
@@ -236,10 +236,6 @@
         "      m_plus = 0.9\n",
         "      m_minus = 0.1\n",
         "      lambda_ = 0.5 \n",
-        "      print(\"-->\", y_true.shape, input.shape)\n",
-        "\n",
-        "     \n",
-        "      \n",
         "      \n",
         "      #y_true one hot encode y_train\n",
         "      T = tf.one_hot(y_true, depth=caps2_n_caps, name=\"T\")\n",
@@ -286,7 +282,7 @@
         "\n",
         "\n",
         "  def squash(self, inputs):\n",
-        "    EPSILON = 1.0e-9\n",
+        "    EPSILON = 1.0e-7\n",
         "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs),\\\n",
         "                                           #axis=self.axis,\\\n",
         "                                           keepdims=True)\n",
@@ -343,7 +339,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UnmSudqTMlPX",
-        "outputId": "e8e288c8-370a-4a2b-82de-643a5e18eed6"
+        "outputId": "ee8e82cd-9b40-427b-cb0d-89ea9861ab31"
       },
       "source": [
         "\n",
@@ -413,11 +409,11 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7fe9fb0ffa90>> and will run it as-is.\n",
+            "WARNING:tensorflow:AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7f6c30189ed0>> and will run it as-is.\n",
             "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
             "Cause: invalid syntax (<unknown>, line 5)\n",
             "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-            "WARNING: AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7fe9fb0ffa90>> and will run it as-is.\n",
+            "WARNING: AutoGraph could not transform <bound method RoutingByAgreement.squash of <__main__.RoutingByAgreement object at 0x7f6c30189ed0>> and will run it as-is.\n",
             "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
             "Cause: invalid syntax (<unknown>, line 5)\n",
             "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
@@ -444,7 +440,7 @@
             "Trainable params: 6,815,744\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
-            "<tensorflow.python.keras.engine.functional.Functional object at 0x7fe9e0258b90> <class 'tensorflow.python.keras.engine.functional.Functional'> None\n"
+            "<tensorflow.python.keras.engine.functional.Functional object at 0x7f6c300c0810> <class 'tensorflow.python.keras.engine.functional.Functional'> None\n"
           ],
           "name": "stdout"
         }
@@ -457,7 +453,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1104d28c-9e11-4ad7-bc7c-0db05fab95ee"
+        "outputId": "7c70b01f-6c6a-4010-f085-0481f4126455"
       },
       "source": [
         "y_train_train = tf.one_hot(y_train, depth=caps2_n_caps, name=\"T\")\n",
@@ -513,20 +509,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cahMgtOqMlPa",
-        "outputId": "8bfd57fc-93c9-4bc6-9798-4cb706589ff6"
+        "outputId": "8be5935b-a14d-4147-daa7-1dcbd5c8d994"
       },
       "source": [
         "m.compile(optimizer='adam', loss=MarginLoss(), metrics=[MyAccuracy()])#, metrics=['accuracy'])\n",
-        "history = m.fit(x_train, y_train, batch_size=32, epochs= 1, verbose= 1)\n"
+        "history = m.fit(x_train, y_train, batch_size=32, epochs= 50, verbose= 1, validation_split=0.2)\n"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--> (32, 1) (32, 1, 10, 16, 1)\n",
-            "--> (32, 1) (32, 1, 10, 16, 1)\n",
-            " 963/1875 [==============>...............] - ETA: 1:05 - loss: 2.2816 - my_accuracy: 0.1913"
+            "Epoch 1/50\n",
+            "1500/1500 [==============================] - 124s 80ms/step - loss: 2.2810 - my_accuracy: 0.2504 - val_loss: 2.2808 - val_my_accuracy: 0.3909\n",
+            "Epoch 2/50\n",
+            " 491/1500 [========>.....................] - ETA: 1:12 - loss: 2.2798 - my_accuracy: 0.4161"
           ],
           "name": "stdout"
         }
