--- a/b_mnistTf2.ipynb
+++ b/b_mnistTf2.ipynb
@@ -122,7 +122,6 @@
         "    self.axis = axis\n",
         "    \n",
         "  def build(self, input_shapes):\n",
-        "    #print(\"SquashLayer input_shape=\", input_shapes)\n",
         "    pass\n",
         "\n",
         "  def call(self, inputs):\n",
@@ -145,15 +144,20 @@
       },
       "source": [
         "class SafeNorm(K.layers.Layer):\n",
+        "  \n",
         "  def __init__(self, axis=-1, keep_dims = False,  **kwargs):\n",
         "    super(SafeNorm, self).__init__(**kwargs)\n",
         "    self.axis = axis\n",
         "    self.keep_dims = keep_dims\n",
+        "\n",
         "  def build(self, input_shapes):\n",
         "    pass\n",
+        "\n",
         "  def call(self, input):\n",
         "    EPSILON = 1.0e-9\n",
-        "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs), axis=self.axis, keepdims= self.keep_dims)\n",
+        "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs),\\\n",
+        "                                           axis=self.axis,\\\n",
+        "                                           keepdims= self.keep_dims)\n",
         "    safe_norm = tf.sqrt(squared_norm + EPSILON)\n",
         "    return safe_norm\n",
         "\n"
@@ -175,13 +179,12 @@
         "    super(MyDigitCapsLayer, self).__init__(**kwargs)\n",
         "\n",
         "  def build(self, input_shapes):\n",
-        "    init_sigma = 0.1\n",
-        "    #                                    print(\"input_shapes = \", input_shapes)\n",
+        "    init_sigma = 0.1  # TODO: use\n",
         "    self.kernel = self.add_weight(\\\n",
-        "                      \"kernel\", \n",
-        "                      (caps1_n_caps, caps2_n_caps, caps2_n_dims, caps1_n_dims),\n",
-        "                      initializer=\"random_normal\",  dtype=tf.float32)\n",
-        "    #print(\"My Caps Layer2: self.kernel = \", self.kernel.shape, \"input_shape = \", input_shapes)\n",
+        "                      \"kernel\",\\\n",
+        "                      (caps1_n_caps, caps2_n_caps, caps2_n_dims, caps1_n_dims),\\\n",
+        "                      initializer=\"random_normal\",\\\n",
+        "                      dtype=tf.float32)\n",
         "\n",
         "  \n",
         "  # To debug this function, I used prints to print the shape\n",
@@ -193,18 +196,13 @@
         "  # Notice I didn't tile in build, but in call, Most probaly this is the right thing to do\n",
         "  # but we'll only figure out when we actually train\n",
         "  def call(self, inputs):\n",
-        "    #                                    print(\"==>\", inputs.shape)\n",
         "    # Add a dimension at the end\n",
         "    exp1 = tf.expand_dims(inputs, -1, name=\"caps1_output_expanded\")\n",
-        "    #                                    print(\"exp1 ==>\", exp1.shape)\n",
         "    # add a dimension along 3rd axis\n",
         "    exp1 = tf.expand_dims(exp1, 2, name=\"caps2_output_espanced\")\n",
-        "    #                                    print(\"exp1 ==>\", exp1.shape)\n",
         "    # tile along 3rd axis\n",
         "    tile = tf.tile(exp1, [1, 1, caps2_n_caps, 1, 1], name=\"caps1_output_tiled\")\n",
-        "    #                                    print(\"tile ==> \", tile.shape)\n",
         "    caps2_predicted = tf.matmul(self.kernel, tile, name=\"caps2_predicted\")\n",
-        "    #                                    print(\"multiply ==>\", caps2_predicted.shape)\n",
         "    return caps2_predicted"
       ],
       "execution_count": 5,
@@ -242,19 +240,27 @@
         "      \n",
         "      caps2_output_norm = self.safe_norm(input, keep_dims = True)\n",
         "\n",
-        "      present_error_raw = tf.square(tf.maximum(0., m_plus - caps2_output_norm),\n",
-        "                              name=\"present_error_raw\")\n",
-        "      present_error = tf.reshape(present_error_raw, shape=(-1, 10),\n",
-        "                           name=\"present_error\")  \n",
+        "      present_error_raw = tf.square(\\\n",
+        "                                    tf.maximum(0., m_plus - caps2_output_norm),\n",
+        "                                    name=\"present_error_raw\")\n",
+        "      present_error = tf.reshape(\\\n",
+        "                                    present_error_raw, shape=(-1, 10),\n",
+        "                                    name=\"present_error\")  \n",
         "  \n",
-        "      absent_error_raw = tf.square(tf.maximum(0., caps2_output_norm - m_minus),\n",
-        "                             name=\"absent_error_raw\")\n",
-        "      absent_error = tf.reshape(absent_error_raw, shape=(-1, 10),\n",
-        "                          name=\"absent_error\")\n",
+        "      absent_error_raw = tf.square(\\\n",
+        "                                    tf.maximum(0., caps2_output_norm - m_minus),\n",
+        "                                    name=\"absent_error_raw\")\n",
+        "      absent_error = tf.reshape(\\\n",
+        "                                    absent_error_raw, shape=(-1, 10),\n",
+        "                                    name=\"absent_error\")\n",
         "  \n",
-        "      L = tf.add(T * present_error, lambda_ * (1.0 - T) * absent_error,\n",
-        "           name=\"L\")\n",
-        "      marginLoss = tf.reduce_mean(tf.reduce_sum(L, axis=1), name=\"margin_loss\")\n",
+        "      L = tf.add(\\\n",
+        "                  T * present_error,\\\n",
+        "                  lambda_ * (1.0 - T) * absent_error,\n",
+        "                  name=\"L\")\n",
+        "      marginLoss = tf.reduce_mean(\\\n",
+        "                                  tf.reduce_sum(L, axis=1),\\\n",
+        "                                  name=\"margin_loss\")\n",
         "      return marginLoss\n",
         "\n"
       ],
@@ -284,7 +290,6 @@
         "  def squash(self, inputs):\n",
         "    EPSILON = 1.0e-7\n",
         "    squared_norm = tf.compat.v1.reduce_sum(tf.square(inputs),\\\n",
-        "                                           #axis=self.axis,\\\n",
         "                                           keepdims=True)\n",
         "    safe_norm = tf.sqrt(squared_norm + EPSILON)\n",
         "    squash_factor = squared_norm / (1. + squared_norm)\n",
@@ -342,11 +347,7 @@
         "outputId": "ee8e82cd-9b40-427b-cb0d-89ea9861ab31"
       },
       "source": [
-        "\n",
-        "\n",
         "class Model:\n",
-        "  \n",
-        "\n",
         "    @staticmethod\n",
         "    def build(inshape=(28, 28, 1)):\n",
         "        inp = K.Input(shape=inshape, dtype=tf.float32, name='input')\n",
@@ -378,31 +379,21 @@
         "        x = K.layers.Conv2D(**conv2_params, name=\"conv_layer_2\")(x)\n",
         "        \n",
         "        # Reshape\n",
-        "        x = K.layers.Reshape((caps1_n_caps, caps1_n_dims), name=\"reshape_layer_1\")(x)\n",
+        "        x = K.layers.Reshape(\\\n",
+        "                             (caps1_n_caps, caps1_n_dims),\\\n",
+        "                             name=\"reshape_layer_1\")(x)\n",
+        "                             \n",
         "        x = SquashLayer(name=\"caps1_output_layer\")(x)\n",
         "        \n",
-        "        # The next part is to build the digit caps, starts from\n",
-        "        # 4:38 in the video\n",
-        "        # I haven't got to it yet, this will take time\n",
-        "        # at any point of time print the shape, and it will print it\n",
         "        x = MyDigitCapsLayer(name = \"caps2_predicted\")(x)\n",
         "        caps2_predicted = x # Save this value for later\n",
         "        \n",
-        "        #routing by agreement\n",
-        "        #Round 1\n",
-        "        x = RoutingByAgreement(name=\"routing1\", roundno=1)(x)\n",
-        "        print(x.shape)\n",
-        "\n",
-        "        \n",
+        "        #routing by agreement (2 rounds)\n",
+        "        x = RoutingByAgreement(name=\"routing1\", roundno=2)(x)\n",
         "        \n",
         "        return K.Model(inputs=inp, outputs=x, name='my')\n",
         "    \n",
-        "m = Model.build()\n",
-        "\n",
-        "# Print the final shape\n",
-        "print(m, type(m), m.summary())\n",
-        "\n",
-        "\n"
+        "m = Model.build()\n"
       ],
       "execution_count": 9,
       "outputs": [
@@ -523,7 +514,29 @@
             "Epoch 1/50\n",
             "1500/1500 [==============================] - 124s 80ms/step - loss: 2.2810 - my_accuracy: 0.2504 - val_loss: 2.2808 - val_my_accuracy: 0.3909\n",
             "Epoch 2/50\n",
-            " 491/1500 [========>.....................] - ETA: 1:12 - loss: 2.2798 - my_accuracy: 0.4161"
+            "1500/1500 [==============================] - 128s 85ms/step - loss: 2.2798 - my_accuracy: 0.5012 - val_loss: 2.2800 - val_my_accuracy: 0.6660\n",
+            "Epoch 3/50\n",
+            "1500/1500 [==============================] - 128s 85ms/step - loss: 2.2795 - my_accuracy: 0.6035 - val_loss: 2.2796 - val_my_accuracy: 0.6356\n",
+            "Epoch 4/50\n",
+            "1500/1500 [==============================] - 128s 86ms/step - loss: 2.2794 - my_accuracy: 0.6650 - val_loss: 2.2798 - val_my_accuracy: 0.8710\n",
+            "Epoch 5/50\n",
+            "1500/1500 [==============================] - 128s 85ms/step - loss: 2.2792 - my_accuracy: 0.7319 - val_loss: 2.2800 - val_my_accuracy: 0.7055\n",
+            "Epoch 6/50\n",
+            "1500/1500 [==============================] - 128s 85ms/step - loss: 2.2792 - my_accuracy: 0.7382 - val_loss: 2.2797 - val_my_accuracy: 0.8392\n",
+            "Epoch 7/50\n",
+            "1500/1500 [==============================] - 129s 86ms/step - loss: 2.2791 - my_accuracy: 0.7652 - val_loss: 2.2796 - val_my_accuracy: 0.7427\n",
+            "Epoch 8/50\n",
+            "1500/1500 [==============================] - 129s 86ms/step - loss: 2.2791 - my_accuracy: 0.7828 - val_loss: 2.2797 - val_my_accuracy: 0.7382\n",
+            "Epoch 9/50\n",
+            "1500/1500 [==============================] - 129s 86ms/step - loss: 2.2789 - my_accuracy: 0.7780 - val_loss: 2.2795 - val_my_accuracy: 0.8405\n",
+            "Epoch 10/50\n",
+            "1500/1500 [==============================] - 129s 86ms/step - loss: 2.2789 - my_accuracy: 0.7986 - val_loss: 2.2803 - val_my_accuracy: 0.4653\n",
+            "Epoch 11/50\n",
+            "1500/1500 [==============================] - 130s 86ms/step - loss: 2.2789 - my_accuracy: 0.7812 - val_loss: 2.2794 - val_my_accuracy: 0.8838\n",
+            "Epoch 12/50\n",
+            "1500/1500 [==============================] - 130s 86ms/step - loss: 2.2790 - my_accuracy: 0.8132 - val_loss: 2.2795 - val_my_accuracy: 0.8888\n",
+            "Epoch 13/50\n",
+            "1057/1500 [====================>.........] - ETA: 32s - loss: 2.2791 - my_accuracy: 0.8441"
           ],
           "name": "stdout"
         }
