--- a/b_mnistTf2_100epochs.ipynb
+++ b/b_mnistTf2_100epochs.ipynb
@@ -494,6 +494,9 @@
         "    y_true = tf.cast(y_true, dtype=tf.int64)\n",
         "    self.acc_obj.update_state(y_true, y_pred, sample_weight)\n",
         "\n",
+        "  def reset_state(self):\n",
+        "    self.acc_obj.reset_state()\n",
+        "\n",
         "  def result(self):\n",
         "    return self.acc_obj.result()"
       ],
@@ -519,7 +522,25 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
-            " 870/1500 [================>.............] - ETA: 44s - loss: 2.2818 - my_accuracy: 0.1714"
+            "1500/1500 [==============================] - 131s 85ms/step - loss: 2.2811 - my_accuracy: 0.2530 - val_loss: 2.2802 - val_my_accuracy: 0.4902\n",
+            "Epoch 2/100\n",
+            "1500/1500 [==============================] - 127s 85ms/step - loss: 2.2799 - my_accuracy: 0.4885 - val_loss: 2.2804 - val_my_accuracy: 0.6477\n",
+            "Epoch 3/100\n",
+            "1500/1500 [==============================] - 127s 85ms/step - loss: 2.2796 - my_accuracy: 0.6048 - val_loss: 2.2796 - val_my_accuracy: 0.8409\n",
+            "Epoch 4/100\n",
+            "1500/1500 [==============================] - 127s 85ms/step - loss: 2.2793 - my_accuracy: 0.7036 - val_loss: 2.2793 - val_my_accuracy: 0.8636\n",
+            "Epoch 5/100\n",
+            "1500/1500 [==============================] - 127s 85ms/step - loss: 2.2792 - my_accuracy: 0.7042 - val_loss: 2.2799 - val_my_accuracy: 0.7481\n",
+            "Epoch 6/100\n",
+            "1500/1500 [==============================] - 127s 84ms/step - loss: 2.2792 - my_accuracy: 0.7605 - val_loss: 2.2797 - val_my_accuracy: 0.7295\n",
+            "Epoch 7/100\n",
+            "1500/1500 [==============================] - 126s 84ms/step - loss: 2.2791 - my_accuracy: 0.7677 - val_loss: 2.2799 - val_my_accuracy: 0.8070\n",
+            "Epoch 8/100\n",
+            "1500/1500 [==============================] - 127s 84ms/step - loss: 2.2790 - my_accuracy: 0.7993 - val_loss: 2.2801 - val_my_accuracy: 0.7863\n",
+            "Epoch 9/100\n",
+            "1500/1500 [==============================] - 127s 84ms/step - loss: 2.2791 - my_accuracy: 0.8078 - val_loss: 2.2795 - val_my_accuracy: 0.8612\n",
+            "Epoch 10/100\n",
+            "1263/1500 [========================>.....] - ETA: 16s - loss: 2.2790 - my_accuracy: 0.8210"
           ],
           "name": "stdout"
         }
